--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,28 @@
 $base-color: #67444E;
 
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Regular.otf");
+}
+@font-face {
+  font-family: "Poppins-Light";
+  src: url("../fonts/Poppins-Light.otf");
+}
+.ff-poppins {
+  font-family: "Poppins";
+}
+.ff-poppins-light {
+  font-family: "Poppins-Light";
+}
+
+.text-large {
+  font-size: 32px;
+  letter-spacing: 7px;
+}
+.text-medium {
+  font-size: 20px;
+  letter-spacing: 4px;
+}
 
 html {
   scroll-behavior: smooth;
@@ -11,14 +34,27 @@ body {
   font-family: 'Poppins';
 }
 
+.centered {
+  align-items: center;
+  justify-content: center;
+}
 
 .container {
   background: url('../res/bg.png') no-repeat center fixed;     
-  background-size: cover;
+  background-size: 100vw 100vh;
   height: 100vh;
-  width: 100vw;
+  width: 100vw; 
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
+
+  .corner-cat {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0%;
+    right: 0%;
+  }
 
   .slide {
     scroll-snap-align: start;
@@ -31,34 +67,99 @@ body {
     justify-content: center;
     align-items: center;
   
-  }
-
-  .btn {
-    background-color: rgb(0,0,0,0);
-    color: $base-color;
-    border: 1px solid $base-color;
-    
-    transition: 0.3s;
-
-    
-
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-  }
-  .btn:hover{
-    background-color: $base-color;
-    color: #FFFFFF;
-  }
-  .btn-small {
-    height: 12rem;
-    width: 12rem;
-    padding: 20px;
-  }
-  .btn-round {
-    border-radius: 50%;
+    .center-group {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50vh;
+    }
+    .navi-panel {
+      position: absolute;
+      height: 127px;
+      top: 82%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
 
+.img-angelxmikkotext {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+}
+.img-corner-rings {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 25vw;
+}
+.img-title-image {
+  position: absolute;
+  width: 25vw;
+  left: 20%;
+  bottom: 0;
+}
+.img-hug {
+  position: absolute;
+  height: 80vh;
+  width: auto;
+  right: 30%;
+}
+.img-dancing-cat {
+  height: 12em;
+}
+
+.span-im-cat {
+  margin-right: -30px;
+  margin-bottom: -80px;
+  color: $base-color;
+  font-family: "Poppins";
+  font-size: 0.5em;
+}
+
+.btn {
+  background-color: rgb(0,0,0,0);
+  color: $base-color;
+  border: 1px solid $base-color;
+  transition: 0.3s;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+}
+.btn:hover{
+  background-color: $base-color;
+  color: #FFFFFF;
+}
+.btn-regular {
+  height: 62px;
+  width: 180px;
+  margin: 10px;
+}
+.btn-small {
+  height: 127px;
+  width: 127px;
+  font-size: 12px;
+}
+.btn-large {
+  height: 500px;
+  width: 500px;
+  font-size: 12px;
+}
+.btn-round {
+  border-radius: 50%;
+}
+.btn-align-left {
+  text-align: left;
+  padding-left: 7%;
+}
+
+.line-brown  {
+  height: 1px;
+  background: $base-color;
+  width: 99px;
+  margin: 20px;
+}
