--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -61,7 +61,7 @@ body {
   height: 100vh;
   width: 100vw; 
   scroll-snap-type: y mandatory;
-  overflow-y: scroll;
+  overflow-y: hidden;
 
   .corner-cat {
     position: absolute;
@@ -70,6 +70,16 @@ body {
     align-items: center;
     bottom: 0%;
     right: 0%;
+  }
+
+  .music-toggle {
+    position: absolute;
+    z-index: 5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0%;
+    left: 0%;
   }
 
   .slide {
@@ -258,7 +268,7 @@ body {
 
 .modal-letter-container {
   background: url('../res/letter-background.png') no-repeat center fixed;
-  height: 70vh; 
+  height: 80vh; 
   width: 700px;
   padding:100px 200px;
   letter-spacing: 2px;
@@ -327,4 +337,10 @@ body {
 
 .modal-question-answers {
   margin: 20px;
+}
+
+.music-icon {
+  height: 40px;
+  width: auto;
+  margin: 5px;
 }
