--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -55,6 +55,10 @@ body {
   justify-content: center;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .container {
   background: url("../res/bg.png") no-repeat center fixed;
   background-size: 100vw 100vh;
@@ -130,6 +134,17 @@ body {
   height: 80vh;
   width: auto;
   right: 30%;
+}
+
+.img-hug {
+  position: absolute;
+  height: 80vh;
+  width: auto;
+  right: 30%;
+}
+
+.img-center-cats {
+  height: 50%;
 }
 
 .img-dancing-cat {
@@ -347,13 +362,22 @@ body {
 }
 
 .modal-question-text {
-  font-size: 36px;
+  font-size: 13px;
   color: #67444E;
   margin: -50px 0px 0px 0px;
 }
 
+.modal-question-thequestion {
+  font-size: 36px;
+  color: #67444E;
+}
+
 .modal-question-answers {
   margin: 20px;
+}
+
+.modal-question-cats {
+  margin-top: -100px;
 }
 
 .music-icon {
