--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -55,6 +55,10 @@ body {
   justify-content: center;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .container {
   background: url('../res/bg.png') no-repeat center fixed;     
   background-size: 100vw 100vh;
@@ -133,6 +137,15 @@ body {
   height: 80vh;
   width: auto;
   right: 30%;
+}
+.img-hug {
+  position: absolute;
+  height: 80vh;
+  width: auto;
+  right: 30%;
+}
+.img-center-cats {
+  height: 50%
 }
 .img-dancing-cat {
   height: 12em;
@@ -330,15 +343,23 @@ body {
 }
 
 .modal-question-text {
-  font-size: 36px;
+  font-size: 13px;
   color: $base-color;
   margin: -50px 0px 0px 0px
+}
+
+.modal-question-thequestion {
+  font-size: 36px;
+  color: $base-color;
 }
 
 .modal-question-answers {
   margin: 20px;
 }
 
+.modal-question-cats {
+  margin-top: -100px;
+}
 .music-icon {
   height: 40px;
   width: auto;
